<resources>
    <string name="app_name">Guia Estudiantes</string>
    <string name="title_activity_pagina_principal">PaginaPrincipal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendario">Calendario</string>
    <string name="grados">Grados</string>
    <string name="comedores">Comedores</string>
    <string name="centros">Centros</string>
    <string name="bibliotecas">Bibliotecas</string>
    <string name="sitios_de_n_interes">Sitios de interes</string>
    <string name="sitios_interes">sitios_interes</string>
    <string name="continuar">Continuar</string>
    <string name="nombre_usuario">Nombre usuario</string>

    <string-array name="facultades">
        <item>Seleccione Facultad</item>
        <item>Arquitectura</item>
        <item>Bellas Artes</item>
        <item>Ciencias</item>
        <item>Educación</item>
        <item>ETSIIT</item>
        <item>Farmacia</item>
        <item>Medicina</item>
    </string-array>


</resources>