<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/comedores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_asiento" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/centros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_universidad" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/centros"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:text="@string/comedores"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/calendario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_calendario" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/calendario"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/grados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_grados" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:text="@string/grados"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/bibliotecas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_bibliotecas" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/bibliotecas"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/sitios_interes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/ic_sitios_interes" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:text="@string/sitios_de_n_interes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

</androidx.constraintlayout.widget.ConstraintLayout>