<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaInicio">

    <ImageView
        android:id="@+id/img_centros"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="63dp"
        android:contentDescription="@string/centros"
        android:src="@drawable/ic_universidad"
        app:layout_constraintEnd_toStartOf="@+id/img_comedores"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_comedores"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/comedores"
        android:src="@drawable/ic_asiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_calendario"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="63dp"
        android:contentDescription="@string/calendario"
        android:src="@drawable/ic_calendario"
        app:layout_constraintEnd_toStartOf="@+id/img_grados"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_centros" />

    <ImageView
        android:id="@+id/img_grados"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/grados"
        android:src="@drawable/ic_grados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_comedores" />

    <ImageView
        android:id="@+id/img_biblioteca"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="59dp"
        android:contentDescription="@string/bibliotecas"
        android:src="@drawable/ic_bibliotecas"
        app:layout_constraintEnd_toStartOf="@+id/img_sitios_interes"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calendario" />

    <ImageView
        android:id="@+id/img_sitios_interes"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/sitios_de_n_interes"
        android:src="@drawable/ic_sitios_interes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_grados" />

    <TextView
        android:id="@+id/text_centros"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:text="@string/centros"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/text_comedores"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_centros" />

    <TextView
        android:id="@+id/text_comedores"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/comedores"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_comedores" />

    <TextView
        android:id="@+id/text_calendario"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:text="@string/calendario"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/text_grados"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_calendario" />

    <TextView
        android:id="@+id/text_grados"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/grados"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_grados" />

    <TextView
        android:id="@+id/text_biblioteca"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:text="@string/bibliotecas"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/text_sitios_interes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_biblioteca" />

    <TextView
        android:id="@+id/text_sitios_interes"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/sitios_de_n_interes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sitios_interes" />
</androidx.constraintlayout.widget.ConstraintLayout>